tests/baselines/reference/indirectSelfReferenceGeneric.errors.txt
==== tests/cases/compiler/indirectSelfReferenceGeneric.ts (1 errors) ====
    class a<T> extends b<T> { }
          ~
!!! error TS2100: Class 'a<T>' is recursively referenced as a base type of itself.
    class b<T> extends a<T> { }